--- a/AAF_Inmobiliaria/Views/Inquilinos/Create.cshtml
+++ b/AAF_Inmobiliaria/Views/Inquilinos/Create.cshtml
@@ -1,68 +1,53 @@
 ﻿@model AAF_Inmobiliaria.Models.Inquilino
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear Inquilino";
 }
 
-<h1>Create</h1>
-
-<h4>Inquilino</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="InquilinoId" class="control-label"></label>
-                <input asp-for="InquilinoId" class="form-control" />
-                <span asp-validation-for="InquilinoId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" />
-                <span asp-validation-for="Apellido" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Dni" class="control-label"></label>
-                <input asp-for="Dni" class="form-control" />
-                <span asp-validation-for="Dni" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Telefono" class="control-label"></label>
-                <input asp-for="Telefono" class="form-control" />
-                <span asp-validation-for="Telefono" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="EstaPublicado" /> @Html.DisplayNameFor(model => model.EstaPublicado)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="EstaHabilitado" /> @Html.DisplayNameFor(model => model.EstaHabilitado)
-                </label>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+@*-------------------------------------------*@
+<div class="form mt-5 container-fluid">
+    <nav class="mt-4 navbar navbar-light bg-light">
+        <a class="navbar-brand">Crear Inquilino</a>
+        <form class="form-inline">
+            <span class="input-group-text, btn btn-outline-warning" data-toggle="tooltip" data-placement="bottom" title="Crea un inquilino con sus atributos">Estas creando un nuevo inquilino</span>
         </form>
-    </div>
+    </nav>
+    <form class="mt-4" asp-action="Create">
+        <div class="crearUsuario">
+            <div class="form-group">
+                <input asp-for="Nombre" class="form-control tbFlotante" type="text" placeholder="" minlength="3" maxlength="20" required pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ]{2,48}">
+                <label class="lblFlotante" data-content="Nombre"></label>
+                <input asp-for="Apellido" class="form-control tbFlotante" type="text" placeholder="" minlength="3" maxlength="20" required pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ]{2,48}">
+                <label class="lblFlotante" data-content="Apellido"></label>
+                <input asp-for="Dni" class="form-control tbFlotante" type="number" placeholder="" min="0" required pattern="[-+]?[0-9]*[.,]?[0-9]+">
+                <label class="lblFlotante" data-content="Dni"></label>
+                <input asp-for="Telefono" class="form-control tbFlotante" type="number" placeholder="" min="0" required pattern="[-+]?[0-9]*[.,]?[0-9]+">
+                <label class="lblFlotante" data-content="Telefono"></label>
+                <input asp-for="Email" class="form-control tbFlotante" type="email" placeholder="" minlength="3" maxlength="20" required>
+                <label class="lblFlotante" data-content="Email"></label>
+                <div class="row">
+                    <label class="col-form-label col-sm-2 pt-0">Disponibilidad:</label>
+                    <div>
+                        <div class="custom-control custom-checkbox">
+                            <input class="custom-control-input" id="chPublicado" asp-for="EstaPublicado">
+                            <label class="custom-control-label" for="chPublicado">Publicación</label>
+                        </div>
+                        <div class="custom-control custom-checkbox">
+                            <input class="custom-control-input" id="chHabilitado" asp-for="EstaHabilitado">
+                            <label class="custom-control-label" for="chHabilitado">Habilitación</label>
+                            <div class="invalid-feedback">sadasdsa?</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button type="submit" value="Create" name="registro" class="button  btn-lg">Registrarse</button>
+            <hr>
+            <a class="button btn btn-success btn-sm" asp-action="Index">Volver a la lista</a>
+        </div>
+    </form>
 </div>
+@*-------------------------------------------*@
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-@section Scripts {
+@*@section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+}*@
