--- a/AAF_Inmobiliaria/Views/Inquilinos/Delete.cshtml
+++ b/AAF_Inmobiliaria/Views/Inquilinos/Delete.cshtml
@@ -1,68 +1,80 @@
 ﻿@model AAF_Inmobiliaria.Models.Inquilino
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar Inquilino";
 }
 
-<h1>Delete</h1>
+@*-------------------------------------------*@
+<div class="form mt-5 container-fluid">
+    <nav class="mt-4 navbar navbar-light bg-light">
+        <a class="navbar-brand">Eliminar Inquilino</a>
+        <form class="form-inline">
+            <span class="input-group-text, btn btn-outline-warning" data-toggle="tooltip" data-placement="bottom" title="Eliminando dicho propietario">Estas eliminando un inquilino</span>
+            <div class="input-group-append ml-1">
+                <a class="btn btn-outline-danger ml-1" asp-action="Create"> <i class="fas fa-minus"></i> </a>
+                <a class="btn btn-outline-success ml-1" asp-action="Create"> <i class="fas fa-pencil-alt"></i> </a>
+            </div>
+        </form>
+    </nav>
+    <form class="indexes" asp-action="Delete">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="crearUsuario">
+            <div class="form-group">
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">ID del Propietario</span>
+                    </div>
+                    <input asp-for="InquilinoId" type="text" class="form-control" disabled>
+                </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Nombre del Propietario</span>
+                    </div>
+                    <input asp-for="Nombre" type="text" class="form-control" disabled>
+                </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Apellido del Propietario</span>
+                    </div>
+                    <input asp-for="Apellido" type="text" class="form-control" disabled>
+                </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Dni del Propietario</span>
+                    </div>
+                    <input asp-for="Dni" type="text" class="form-control" disabled>
+                </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Telefono del Propietario</span>
+                    </div>
+                    <input asp-for="Telefono" type="text" class="form-control" disabled>
+                </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Email del Propietario</span>
+                    </div>
+                    <input asp-for="Email" type="text" class="form-control" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-form-label col-sm-2 pt-0">Disponibilidad del Inquilino:</label>
+                    <div>
+                        <div class="custom-control custom-checkbox">
+                            <input class="custom-control-input" id="chPublicado" asp-for="EstaPublicado" disabled>
+                            <label class="custom-control-label" for="chPublicado">Publicación</label>
+                        </div>
+                        <div class="custom-control custom-checkbox">
+                            <input class="custom-control-input" id="chHabilitado" asp-for="EstaHabilitado" disabled>
+                            <label class="custom-control-label" for="chHabilitado">Habilitación</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Inquilino</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.InquilinoId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.InquilinoId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Apellido)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Apellido)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Dni)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Dni)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Telefono)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Telefono)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EstaPublicado)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EstaPublicado)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EstaHabilitado)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EstaHabilitado)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+            <button type="submit" value="Delete" name="eliminar" class="button btn-danger btn-lg">Eliminar</button>
+            <hr>
+            <a class="button btn btn-success btn-sm mt-1" asp-action="Index">Volver a la lista</a>
+        </div>
     </form>
 </div>
+@*-------------------------------------------*@
