--- a/AAF_Inmobiliaria/Views/Inquilinos/Details.cshtml
+++ b/AAF_Inmobiliaria/Views/Inquilinos/Details.cshtml
@@ -1,66 +1,81 @@
 ﻿@model AAF_Inmobiliaria.Models.Inquilino
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalles del Inquilino";
 }
 
-<h1>Details</h1>
+@*-------------------------------------------*@
+<div class="form mt-5 container-fluid">
+    <nav class="mt-4 navbar navbar-light bg-light">
+        <a class="navbar-brand">Detalles del Inquilino</a>
+        <form class="form-inline">
+            <span class="input-group-text, btn btn-outline-warning" data-toggle="tooltip" data-placement="bottom" title="Edita dicho un propietario">Estas viendo detalles de un inquilino</span>
+            <div class="input-group-append ml-1">
+                <a class="btn btn-outline-danger ml-1" asp-action="Create"> <i class="fas fa-minus"></i> </a>
+                <a class="btn btn-outline-success ml-1" asp-action="Create"> <i class="fas fa-pencil-alt"></i> </a>
+            </div>
+        </form>
+    </nav>
+    <form class="indexes">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="crearUsuario">
+            <div class="form-group">
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">ID del Inquilino</span>
+                    </div>
+                    <input asp-for="InquilinoId" type="text" class="form-control" disabled>
+                </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Nombre del Inquilino</span>
+                    </div>
+                    <input asp-for="Nombre" type="text" class="form-control" disabled>
+                </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Apellido del Inquilino</span>
+                    </div>
+                    <input asp-for="Apellido" type="text" class="form-control" disabled>
+                </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Dni del Inquilino</span>
+                    </div>
+                    <input asp-for="Dni" type="text" class="form-control" disabled>
+                </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Telefono del Inquilino</span>
+                    </div>
+                    <input asp-for="Telefono" type="text" class="form-control" disabled>
+                </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Email del Inquilino</span>
+                    </div>
+                    <input asp-for="Email" type="text" class="form-control" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-form-label col-sm-2 pt-0">Disponibilidad del Inquilino:</label>
+                    <div>
+                        <div class="custom-control custom-checkbox">
+                            <input class="custom-control-input" id="chPublicado" asp-for="EstaPublicado" disabled>
+                            <label class="custom-control-label" for="chPublicado">Publicación</label>
+                        </div>
+                        <div class="custom-control custom-checkbox">
+                            <input class="custom-control-input" id="chHabilitado" asp-for="EstaHabilitado" disabled>
+                            <label class="custom-control-label" for="chHabilitado">Habilitación</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-<div>
-    <h4>Inquilino</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.InquilinoId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.InquilinoId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Apellido)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Apellido)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Dni)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Dni)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Telefono)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Telefono)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EstaPublicado)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EstaPublicado)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EstaHabilitado)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EstaHabilitado)
-        </dd>
-    </dl>
+            <hr>
+
+            @*<a asp-action="Edit" asp-route-id="PropietarioId" class="button btn btn-warning btn-sm">Editar</a>*@
+            <a class="button btn btn-success btn-sm mt-1" asp-action="Index">Volver a la lista</a>
+        </div>
+    </form>
 </div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
-</div>
+@*-------------------------------------------*@
