--- a/AAF_Inmobiliaria/Views/Inquilinos/Edit.cshtml
+++ b/AAF_Inmobiliaria/Views/Inquilinos/Edit.cshtml
@@ -1,68 +1,43 @@
 ﻿@model AAF_Inmobiliaria.Models.Inquilino
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Inquilino";
 }
 
-<h1>Edit</h1>
-
-<h4>Inquilino</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="InquilinoId" class="control-label"></label>
-                <input asp-for="InquilinoId" class="form-control" />
-                <span asp-validation-for="InquilinoId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" />
-                <span asp-validation-for="Apellido" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Dni" class="control-label"></label>
-                <input asp-for="Dni" class="form-control" />
-                <span asp-validation-for="Dni" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Telefono" class="control-label"></label>
-                <input asp-for="Telefono" class="form-control" />
-                <span asp-validation-for="Telefono" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="EstaPublicado" /> @Html.DisplayNameFor(model => model.EstaPublicado)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="EstaHabilitado" /> @Html.DisplayNameFor(model => model.EstaHabilitado)
-                </label>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
+@*-------------------------------------------*@
+<div class="form mt-5 container-fluid">
+    <nav class="indexes navbar navbar-light bg-light">
+        <a class="navbar-brand">Editar Inquilino</a>
+        <form class="form-inline">
+            <span class="input-group-text, btn btn-outline-warning" data-toggle="tooltip" data-placement="bottom" title="Edita dicho un inquilino">Estas editando un inquilino</span>
         </form>
-    </div>
-</div>
+    </nav>
+    <form class="mt-3" asp-action="Edit">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="crearUsuario">
+            <div class="form-group">
+                <input asp-for="InquilinoId" class="form-control tbFlotante" type="hidden"> @*OCULTO*@
 
-<div>
-    <a asp-action="Index">Back to List</a>
+                <input asp-for="Nombre" class="form-control tbFlotante" type="text" placeholder="" minlength="3" maxlength="20" required pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ]{2,48}">
+                <label class="lblFlotante" data-content="Nombre"></label>
+                <input asp-for="Apellido" class="form-control tbFlotante" type="text" placeholder="" minlength="3" maxlength="20" required pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ]{2,48}">
+                <label class="lblFlotante" data-content="Apellido"></label>
+                <input asp-for="Dni" class="form-control tbFlotante" type="number" placeholder="" min="0" required pattern="[-+]?[0-9]*[.,]?[0-9]+">
+                <label class="lblFlotante" data-content="Dni"></label>
+                <input asp-for="Telefono" class="form-control tbFlotante" type="number" placeholder="" min="0" required pattern="[-+]?[0-9]*[.,]?[0-9]+">
+                <label class="lblFlotante" data-content="Telefono"></label>
+                <input asp-for="Email" class="form-control tbFlotante" type="email" placeholder="" minlength="5" maxlength="30" required>
+                <label class="lblFlotante" data-content="Email"></label>
+               
+            </div>
+            <button type="submit" value="Save" name="registro" class="button btn-lg">Editar</button>
+            <hr>
+            <a class="button btn btn-success btn-sm" asp-action="Index"> Volver a la lista</a>
+        </div>
+    </form>
 </div>
+@*-------------------------------------------*@
 
-@section Scripts {
+@*@section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+}*@
