--- a/AAF_Inmobiliaria/Views/Shared/_Layout.cshtml
+++ b/AAF_Inmobiliaria/Views/Shared/_Layout.cshtml
@@ -1,94 +1,145 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="~/css/headercss.css" />
-	<link rel="stylesheet" href="~/css/estilo.css" />
-	<link rel="stylesheet" href="~/css/createlogin.css">
-	<title>@ViewData["Title"] - AAF_Inmobiliaria</title>
-	<script src="https://kit.fontawesome.com/7a562b198c.js" crossorigin="anonymous"></script>
-	<environment include="Development">
-		<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-	</environment>
-	<environment exclude="Development">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-			  asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-			  asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
-			  crossorigin="anonymous"
-			  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
-	</environment>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="~/css/headercss.css" />
+    <link rel="stylesheet" href="~/css/estilo.css" />
+    <link rel="stylesheet" href="~/css/createlogin.css">
+    <title>@ViewData["Title"] - AAF_Inmobiliaria</title>
+    <script src="https://kit.fontawesome.com/7a562b198c.js" crossorigin="anonymous"></script>
+    <environment include="Development">
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    </environment>
+    <environment exclude="Development">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
+              crossorigin="anonymous"
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
+    </environment>
 </head>
-<body class="cuerpo h-75" style="height: 100px">
-	<header class="aseguradora">
-		@*------------------Ariel------------------*@
-		<nav class="navbar">
-			<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/img/CanitoLogo.png" alt="CanitoLogo" class="logo"></a>
-			<ul class="nav nav-tabs menu">
-				<li class="nav-item itemMenu">
-					<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"> <i class="fas fa-home"> </i> Inicio </a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link text-dark" asp-area="" asp-controller="Propietarios" asp-action="Index"> <i class="fas fa-house-user"> </i> Propietarios</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link text-dark" asp-area="" asp-controller="Inquilinos" asp-action="Index"> <i class="fas fa-users"> </i> Inquilinos</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link active disabled"> <i class="fas fa-chevron-circle-left"> </i> Menu</a>
-				</li>
-			</ul>
-		</nav>
-		@*------------------Ariel------------------*@
-	</header>
-	<div class="container">
-		<partial name="_CookieConsentPartial" />
-		<main role="main" class="pb-3">
-			@RenderBody()
-		</main>
-	</div>
-	<footer>
-		
-		<nav class="navbar navbar-light bg-light pie">
-			<h6> &copy; Creado por Ariel Alonso Fernández - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacidad y Condiciones</a></h6>
-			<form class="form-inline my-2 my-lg-0 pie-redes">
-
-				<a class="nav-link" href="#"> <i class="fab fa-facebook"></i> </a>
-				<a class="nav-link" href="#"> <i class="fab fa-twitter-square"> </i> </a>
-				<a class="nav-link" href="#"> <i class="fab fa-instagram"></i> </a>
-				<a class="nav-link" href="#"> <i class="fab fa-google-plus-g"></i> </a>
-				<a class="nav-link" href="#"> <i class="icon-abc"></i> </a>
-
-			</form>
-		</nav>
-	</footer>
-	<footer class="border-top footer text-muted">
-		<div class="container">
-			
-		</div>
-	</footer>
-
-	<environment include="Development">
-		<script src="~/lib/jquery/dist/jquery.js"></script>
-		<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-	</environment>
-	<environment exclude="Development">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
-				asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-				asp-fallback-test="window.jQuery"
-				crossorigin="anonymous"
-				integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=">
-		</script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
-				asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"
-				asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-				crossorigin="anonymous"
-				integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o">
-		</script>
-	</environment>
-	<script src="~/js/site.js" asp-append-version="true"></script>
-
-	@RenderSection("Scripts", required: false)
+@*------------------Ariel------------------*@
+<body class="cuerpo h-75">
+    <header class="aseguradora">
+        <nav class="navbar container-fluid">
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/img/CanitoLogo.png" alt="CanitoLogo" class="logo"></a>
+            <ul class="nav nav-tabs menu">
+                @if (User.IsInRole("Administrador"))
+                {
+                    <li class="nav-item itemMenu">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"> <i class="fas fa-home"> </i> Inicio </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Propietarios" asp-action="Index"> <i class="fas fa-house-user"> </i> Propietarios </a>
+                    </li>
+                }
+                @if (User.IsInRole("Propietario"))
+                {
+                    <li class="nav-item itemMenu">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"> <i class="fas fa-home"> </i> Inicio </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Inmuebles" asp-action="Index"> <i class="fas fa-building"> </i> Inmuebles</a>
+                    </li>
+                    <li class="nav-item disabled">
+                        <a class="nav-link disabled" asp-area="" asp-controller="Pagos" asp-action="Index"> <i class="fas fa-money-bill-alt"> </i> Pagos</a>
+                    </li>
+                    <li class="nav-item disabled">
+                        <a class="nav-link disabled" asp-area="" asp-controller="Alquileres" asp-action="Index"> <i class="fas fa-house-user"> </i> Alquileres</a>
+                    </li>
+                }
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <!--INICIO Login CABECERA-->
+                    <li class="nav-item dropdown sesionEmail">
+                        <a class="nav-link btn text-light dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                            @User.Identity.Name
+                        </a>
+                        <div class="dropdown-menu w-100">
+                            <form class="px-3">                            
+                                <ul class="list-group">
+                                    <li class="list-group-item active"> <img src="~/img/usuarioCualquiera.png" alt="" title="" width="30" height="30" class="d-inline-block"> @(User.FindFirst("ApiyNom").Value) </li>
+                                    <li class="list-group-item text-center"> <i class="fas fa-tags"></i> @(User.FindFirst("TipoDeUsuario").Value) </li>                                
+                                </ul>
+                                <hr />
+                                <div class="form-group">
+                                    <fieldset disabled>
+                                        <div class="input-group mb-2">
+                                            <div class="input-group-prepend">
+                                                <div class="input-group-text"><i class="fas fa-dna"></i></div>
+                                            </div>
+                                            <input type="text" class="form-control" id="inputDni" placeholder="@(User.FindFirst("Dni").Value)">
+                                        </div>
+                                        <div class="input-group mb-2">
+                                            <div class="input-group-prepend">
+                                                <div class="input-group-text"><i class="fas fa-phone"></i></div>
+                                            </div>
+                                            <input type="text" class="form-control" id="inputTelefono" placeholder="@(User.FindFirst("Telefono").Value)">
+                                        </div>
+                                    </fieldset>
+                                </div>
+                            </form>
+                            <hr>
+                            <a class="dropdown-item text-dark" asp-controller="Propietarios" asp-action="Edit"><i class="lnr lnr-exit"></i> Modificar Usuario</a>
+                            <a class="dropdown-item text-dark" asp-controller="Propietarios" asp-action="Logout"><i class="lnr lnr-exit"></i> Salir</a>
+                        </div>
+                    </li>
+                    <!--FIN USUARIO CABECERA-->
+                }
+                else
+                {
+                    <li class="nav-item itemMenu">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"> <i class="fas fa-home"> </i> Inicio </a>
+                    </li>
+                    <li class="nav-item iniSesion">
+                        <a class="nav-link btn text-light" asp-area="" asp-controller="Propietarios" asp-action="Login"> <i class="fas fa-key"> </i> Iniciar Sesion </a>
+                    </li>
+                }
+            </ul>
+        </nav>
+    </header>
+    <div class="container">
+        <partial name="_CookieConsentPartial" />
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
+    </div>
+    <footer>
+        <nav class="navbar navbar-light bg-light pie">
+            <h6> &copy; Creado por Ariel Alonso Fernández - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacidad y Condiciones</a></h6>
+            <form class="form-inline my-2 my-lg-0 pie-redes">
+                <a class="nav-link" href="#"> <i class="fab fa-facebook"></i> </a>
+                <a class="nav-link" href="#"> <i class="fab fa-twitter-square"> </i> </a>
+                <a class="nav-link" href="#"> <i class="fab fa-instagram"></i> </a>
+                <a class="nav-link" href="#"> <i class="fab fa-google-plus-g"></i> </a>
+                <a class="nav-link" href="#"> <i class="icon-abc"></i> </a>
+            </form>
+        </nav>
+    </footer>
+    @*------------------Ariel------------------*@
+    <environment include="Development">
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+        <script src="~/js/mdb.js"></script>
+        <script src="~/js/site.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+                asp-fallback-test="window.jQuery"
+                crossorigin="anonymous"
+                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=">
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
+                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"
+                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+                crossorigin="anonymous"
+                integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o">
+        </script>
+    </environment>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @RenderSection("Scripts", required: false)
 
 </body>
 </html>
