--- a/AAF_Inmobiliaria/wwwroot/css/headercss.css
+++ b/AAF_Inmobiliaria/wwwroot/css/headercss.css
@@ -4,16 +4,17 @@
 .aseguradora{
     background-image: url("../img/headerCanito.png");
     border-bottom: outset;
-    color: aquamarine;  
+    color: aquamarine;
 }
 .btnIngresar{
     width: 100%;
 }
 .menu{
-    border: inset aquamarine;
-    border-width: 1px 2px 0px 1px; 
+    border: outset #FBFBFB;
+    border-width: 5px 5px 0px 3px; 
     background: #E0E0E0;
 }
-.menu a{
-    color:#800306;
+.userMail{
+    
+	color:#1151B3;
 }
