--- a/AAF_Inmobiliaria/wwwroot/css/createlogin.css
+++ b/AAF_Inmobiliaria/wwwroot/css/createlogin.css
@@ -68,4 +68,7 @@ input[type=text],input[type=email] {
 input[type=text],input[type=number] {
     user-select:text; 
 }
+textarea {
+    user-select: text;
+}
 
